tests/core/negative/control/branch_mismatch.vais
F main() -> i64 {
    value: i64 := I true { 1 } EL { "bad" }
    R value
}
